Fixed footer styling on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,6 +156,13 @@ footer a:hover {
     }
 }
 
+@media screen and (max-width: 800px){  
+    footer {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
 @media screen and (max-width: 1500px) {
     .about {
         font-size: larger;
